--- a/Module2/graphs.html
+++ b/Module2/graphs.html
@@ -147,7 +147,7 @@
               to
               go!
             </p>
-            <!-- Add Image Here -->
+            <img src='Height_vs_age.jpeg' width='300' height='200'>
           </div>
         </div>
         </div>
